src/objects/Solicitud_de_credito__c.object
<CustomObject>
    <fields>
        <fullName>Antecedentes_disciplinarios_procuradur_a__c</fullName>
        <label>Antecedentes disciplinarios procuraduría</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Antecedentes_judiciales_policia_nacional__c</fullName>
        <label>Antecedentes judiciales policia nacional</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Antecedentes_responsabilidad_fiscal__c</fullName>
        <label>Antecedentes responsabilidad fiscal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aplica_para_excepcion__c</fullName>
        <label>Aplica para excepción</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aporta_Ingresos__c</fullName>
        <formula>TEXT(Codeudor_1__r.Aporta_ingresos__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aporta Ingresos</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apto_Casa1__c</fullName>
        <label>Apto/Casa</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apto__c</fullName>
        <label>Apto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area_privada__c</fullName>
        <label>Area privada</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area_que_legalizo__c</fullName>
        <label>Área que legalizó</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comercial</fullName>
                </value>
                <value>
                    <fullName>Operaciones</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_responsable_que_genera__c</fullName>
        <label>Area responsable que genera</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comercial</fullName>
                </value>
                <value>
                    <fullName>Riesgos</fullName>
                </value>
                <value>
                    <fullName>Operaciones</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_total__c</fullName>
        <label>Area total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Autorizacin_de_desembolso_a_terceros__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autorización de desembolso a terceros</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autorizacion_compra_de_cartera_y_cesi_n__c</fullName>
        <label>Autorización compra de cartera y cesión</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Autorizacion_para_desembolso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autorización para desembolso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autorizado_por__c</fullName>
        <label>Autorizado por</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avaluos_creados__c</fullName>
        <label>Avalúos creados</label>
        <summaryForeignKey>Avaluos__c.Solicitud_de_credito_avaluo__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Banco__c</fullName>
        <label>Banco</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asopagos</fullName>
                </value>
                <value>
                    <fullName>Bancamia</fullName>
                </value>
                <value>
                    <fullName>Banco Agrario De Colombia S.A.</fullName>
                </value>
                <value>
                    <fullName>Banco Av Villas</fullName>
                </value>
                <value>
                    <fullName>Banco Caja Social - Bcsc S.A.</fullName>
                </value>
                <value>
                    <fullName>Banco Colpatria</fullName>
                </value>
                <value>
                    <fullName>Banco Corpbanca Colombia S.A.</fullName>
                </value>
                <value>
                    <fullName>Banco Davivienda S.A.</fullName>
                </value>
                <value>
                    <fullName>Banco De Bogotá</fullName>
                </value>
                <value>
                    <fullName>Banco De La Republica</fullName>
                </value>
                <value>
                    <fullName>Banco De Occidente</fullName>
                </value>
                <value>
                    <fullName>Banco Falabella S.A.</fullName>
                </value>
                <value>
                    <fullName>Banco Finandina S.A.</fullName>
                </value>
                <value>
                    <fullName>Banco Gnb Sudameris S.A.</fullName>
                </value>
                <value>
                    <fullName>Bancoldex</fullName>
                </value>
                <value>
                    <fullName>Bancolombia S.A.</fullName>
                </value>
                <value>
                    <fullName>Bancoomeva</fullName>
                </value>
                <value>
                    <fullName>Banco Pichincha S.A.</fullName>
                </value>
                <value>
                    <fullName>Banco Popular</fullName>
                </value>
                <value>
                    <fullName>Banco Procredit</fullName>
                </value>
                <value>
                    <fullName>Banco Santander</fullName>
                </value>
                <value>
                    <fullName>Bbva Colombia</fullName>
                </value>
                <value>
                    <fullName>Bnp Paribas S.A.</fullName>
                </value>
                <value>
                    <fullName>Citibank Colombia</fullName>
                </value>
                <value>
                    <fullName>Compensar</fullName>
                </value>
                <value>
                    <fullName>Confiar</fullName>
                </value>
                <value>
                    <fullName>Coopcentral</fullName>
                </value>
                <value>
                    <fullName>Coop Financiera De Antioquia</fullName>
                </value>
                <value>
                    <fullName>Corficolombiana</fullName>
                </value>
                <value>
                    <fullName>Cotrafa Coop Finac</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Barrio__c</fullName>
        <label>Barrio</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bienvenida__c</fullName>
        <label>Bienvenida</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contactar más tarde</fullName>
                </value>
                <value>
                    <fullName>Efectiva</fullName>
                </value>
                <value>
                    <fullName>Ilocalizado</fullName>
                </value>
                <value>
                    <fullName>Mensaje a tercero</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bloque__c</fullName>
        <label>Bloque</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bloqueo_constructora__c</fullName>
        <formula>Constructora_1__r.Bloqueo_para_desembolso__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bloqueo constructora</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Boleta_de_registro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boleta de registro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bonos__c</fullName>
        <label>Bonos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIFIN_en_carpeta_virtual__c</fullName>
        <label>CIFIN en carpeta virtual</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTYL_trae_hipoteca_a_favor_de_CF__c</fullName>
        <label>CTYL trae hipoteca a favor de CF?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calidad_legalizacion10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calidad legalización</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calidad_legalizacion11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calidad legalización</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calidad_legalizacion12__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calidad legalización</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calidad_legalizacion_15__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calidad legalización</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calidad_para_desembolso10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calidad para desembolso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calidad_para_desembolso11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calidad para desembolso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calidad_para_desembolso12__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calidad para desembolso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calidad_para_desembolso_15__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calidad para desembolso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Canal_digital__c</fullName>
        <label>Canal digital</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancelacion_de_comision_de_legalizacion__c</fullName>
        <label>Cancelación de comisión de legalización</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cantidad10__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cantidad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cantidad11__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cantidad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cantidad12__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cantidad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cantidad_26__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cantidad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cantidades__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cantidad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carta_de_cliente_con_frech__c</fullName>
        <label>Carta de cliente con FRECH</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carta_de_pago_a_prorratas__c</fullName>
        <label>Carta de pago a prorratas</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carta_de_preaprobacion_no__c</fullName>
        <label>Carta de preaprobación no</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carta_de_sugerencias_firmada__c</fullName>
        <label>Carta de sugerencias firmada</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carta_definitiva__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box</description>
        <label>Carta definitiva</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Carta_laboral_con_especificaciones__c</fullName>
        <label>Carta laboral con especificaciones</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificad_entidad_donde_tienen_acciones__c</fullName>
        <label>Certificado entidad donde tiene acciones</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificado_de_camara_de_comercio__c</fullName>
        <label>Certificado de camara de comercio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificado_de_ingresos_y_retenciones_de__c</fullName>
        <label>Certificado ingresos y retenciones</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificado_de_otros_ingresos__c</fullName>
        <label>Certificado de otros ingresos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificado_de_tramite_notarial_IDU__c</fullName>
        <label>Certificado de trámite notarial (IDU)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificado_paz_y_salvo_impuesto_predial__c</fullName>
        <label>Certificado paz y salvo impuesto predial</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificado_saldo_deuda__c</fullName>
        <label>Certificado saldo de la deuda</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificado_tradicion_y_libertad__c</fullName>
        <label>Certificado tradición y libertad</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificado_vinculacion_a_empresa_transp__c</fullName>
        <label>Certificado vinculación a empresa transp</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Circulo__c</fullName>
        <label>Circulo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad__c</fullName>
        <label>Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_vivienda_usada__c</fullName>
        <label>Ciudad</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cliente_con_visita__c</fullName>
        <label>¿Cliente con visita?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_deudor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente deudor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Solicitudes de créditos</relationshipLabel>
        <relationshipName>Solicitudes_de_creditos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codeudor_1_N_mero_de_documento__c</fullName>
        <label>Codeudor 1:Número de documento</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codeudor_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codeudor 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Solicitudes de créditos (Codeudor 1)</relationshipLabel>
        <relationshipName>Solicitudes_de_creditos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codeudor_2_N_mero_de_documento__c</fullName>
        <label>Codeudor 2:Número de documento</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codeudor_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codeudor 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Solicitudes de créditos (Codeudor 2)</relationshipLabel>
        <relationshipName>Solicitudes_de_creditos2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codeudor_3_N_mero_de_documento__c</fullName>
        <label>Codeudor 3:Número de documento</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codeudor_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codeudor 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Solicitudes de créditos (Codeudor 3)</relationshipLabel>
        <relationshipName>Solicitudes_de_creditos3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codigo_FRECH__c</fullName>
        <label>Código FRECH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Codigo_solicitud__c</fullName>
        <externalId>true</externalId>
        <label>Código solicitud</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comprobante_pago_pension_ultimos_2_meses__c</fullName>
        <label>Comprobante pago pensión últimos 2 meses</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comprobantes_de_nomina_ultimos_2_meses__c</fullName>
        <label>Comprobantes de nomina últimos 2 meses</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Condiciones_carta_definitiva__c</fullName>
        <label>Condiciones carta definitiva</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consecutivo_solicitud__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consecutivo solicitud</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constructora_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Constructora</label>
        <referenceTo>Constructora__c</referenceTo>
        <relationshipLabel>Solicitudes de créditos</relationshipLabel>
        <relationshipName>Solicitudes_de_cr_ditos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Constructora__c</fullName>
        <label>Constructora</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contratos_de_arrendamientos__c</fullName>
        <label>Contratos de arrendamientos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copia_ltima_escritura_inmueble__c</fullName>
        <label>Copia última escritura inmueble</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cuales__c</fullName>
        <label>Cuales?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Custodia_de_documentos__c</fullName>
        <label>Custodia de documentos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credifamilia</fullName>
                </value>
                <value>
                    <fullName>Custodio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_en_carpeta_virtual__c</fullName>
        <label>Data en carpeta virtual</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaracion_renta_o_carta_no_declarante__c</fullName>
        <label>Declaración renta o carta no declarante</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Desembolso__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box</description>
        <label>Desembolso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Desembolso_con_frech__c</fullName>
        <label>¿Desembolso con FRECH?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Desembolso_con_pago_a_prorrata__c</fullName>
        <label>¿Desembolso con pago a prorrata?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Desembolso_detenido_1__c</fullName>
        <label>Desembolso detenido</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Desembolso_verificado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Desembolso verificado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digitalizado10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digitalizado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digitalizado11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digitalizado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digitalizado12__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digitalizado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direccion__c</fullName>
        <label>Dirección</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_del_inmueble__c</fullName>
        <label>Dirección del inmueble</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documento_afiliac_caja_de_compensacion__c</fullName>
        <label>Documento afiliac. caja de compensación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documento_afiliacion_al_SGSS_salud_pensi__c</fullName>
        <label>Documento afiliación al SGSS salud/pensi</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documento_de_afiliacion_arp__c</fullName>
        <label>Documento de afiliación ARP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>